# tent

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  TODO.md  a.out  add.nl  add.tent  ast.cpp  ast.hpp  bf.nl  bf.tent  bsearch.nl  bsearch_test.nl  bsearch_test.tent  build.zig  build.zig.zon  clean.sh  command_for_bsearch.nl.sh  complex.tent  direction.tent  evaluator.hpp  file.nl  gui.nl  k.tent  lexer.cpp  lexer.hpp  main.cpp  main.nl  main.tent  parser.cpp  recurse.nl  recurse.tent  star_triangle  star_triangle.c  test.nl  test.tent  test1.nl  test1.tent  (+9 more)
benchmarks/: CMakeLists.txt  fib.tent  loop.tent  runner.cpp  sieve.tent  str_concat.tent
examples/: add.tent  bf.tent  bsearch.tent  bsearch_test.tent  complex.tent  direction.tent  file.tent  k  k.tent  main.tent  recurse.tent  test.bf  test1.tent  test_file.tent  tictactoe.tent  wait.tent
ext_include/: util-log.hpp
include/: args.hpp  ast.hpp  compiler.hpp  config.hpp  defs.hpp  diagnostics.hpp  errors.hpp  evaluator.hpp  lexer.hpp  misc.hpp  native.hpp  opcodes.hpp  parser.hpp  span.hpp  token.hpp  types.hpp  value_string.hpp  visitor.hpp  vm.hpp
lib/: CMakeLists.txt  Makefile  gui.cpp  io.cpp  keyboard.cpp  libgui.dylib  libio.dylib  libmath.dylib  math.cpp  stdnl.cpp  stdtent.cpp  time.cpp  tm.cpp
runtime/: CMakeLists.txt  box_ops.cpp  box_ops.hpp  dynamic_ops.cpp  dynamic_value.hpp
src/: args.cpp  ast.cpp  compiler.cpp  diagnostics.cpp  errors.cpp  esc_codes.cpp  esc_codes.hpp  evaluator.cpp  is_digit_incl.cpp  lexer.cpp  main.cpp  misc.cpp  native.cpp  parser.cpp  token.cpp  types.cpp  vm.cpp
tests/: CMakeLists.txt  README.md  getlen  getlen.c  getlen.nl  getlen.tent  getlen_test.sh  run_tent_case.cmake  star_triangle.nl  star_triangle.tent
tests/cases/bitwise-shift/: program.tent
tests/cases/bool-logic/: program.tent
tests/cases/class-field/: program.tent
tests/cases/class-method/: program.tent
tests/cases/cli-arg-count/: program.tent
tests/cases/cli-arg-index/: program.tent
tests/cases/compound-add-assign/: program.tent
tests/cases/compound-pow-assign/: program.tent
tests/cases/err-runtime-traceback-division/: expected.err.contains  program.tent
tests/cases/err-syntax-bad-if/: program.tent
tests/cases/err-syntax-empty-rhs/: program.tent
tests/cases/err-syntax-missing-paren/: program.tent
tests/cases/err-type-add-int-string/: program.tent
tests/cases/err-type-bool-plus-int/: program.tent
tests/cases/err-type-index-assign-nonvar/: program.tent
tests/cases/err-type-unary-bit-not-string/: program.tent
tests/cases/err-type-vector-index-nonint/: program.tent
tests/cases/err-type-vector-index-oob/: program.tent
tests/cases/err-type-vector-plus-int/: program.tent
tests/cases/expr-parens/: program.tent
tests/cases/expr-pow-right-assoc/: program.tent
tests/cases/expr-precedence/: program.tent
tests/cases/floor-div-mod/: program.tent
tests/cases/form-add/: program.tent
tests/cases/getlen-arg/: program.tent
tests/cases/getlen-stdin/: program.tent
tests/cases/if-else/: program.tent
tests/cases/module-namespacing/: program.tent
tests/cases/recursion-factorial/: program.tent
tests/cases/star-triangle-3/: program.tent
tests/cases/string-concat/: program.tent
tests/cases/string-length/: program.tent
tests/cases/vector-index-read/: program.tent
tests/cases/vector-index-write/: program.tent
tests/cases/vector-len/: program.tent
tests/cases/while-sum/: program.tent
